# xtl-read-assistant

./: .coverage  .coveragerc  0  README.md  coverage.xml  hello.py  hotkey-tr-janus.py  pyproject.toml  pyproject.toml-  requirements.txt
.github/workflows/: build-windows.yml  build.yml  codecov.yml
tests/: test_read_assist_absl.py  test_read_assist_version.py  test_read_assistant.py
xtl_read_assistant/: __init__.py  __main__.py  hotkey.py  log_revision.py  read_assist.py  read_assistant.py
